// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expand and collapse link 1`] = `
<li>
  <a
    className="link-with-icon"
    href="scm:git:git@github.com"
    rel="nofollow"
    target="_blank"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="foo"
    />
    Foo
  </a>
</li>
`;

exports[`should expand and collapse link 2`] = `
<li>
  <a
    className="link-with-icon"
    href="scm:git:git@github.com"
    rel="nofollow"
    target="_blank"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="foo"
    />
    Foo
  </a>
</li>
`;

exports[`should expand and collapse link 3`] = `
<li>
  <a
    className="link-with-icon"
    href="scm:git:git@github.com"
    rel="nofollow"
    target="_blank"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="foo"
    />
    Foo
  </a>
</li>
`;

exports[`should match snapshot 1`] = `
<li>
  <a
    className="link-with-icon"
    href="http://example.com"
    rel="nofollow"
    target="_blank"
  >
    <ProjectLinkIcon
      className="little-spacer-right"
      type="foo"
    />
    Foo
  </a>
</li>
`;
